# chess

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  main.cpp  piece.cpp  piece.h
build-chess_window-Desktop_Qt_6_0_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
chess_window/: chess_window.pro  main_window.cpp  window.cpp
src/: main.rs  piece_logic.rs
src/engine/: board.rs  piece.rs
src/models/: pieces.rs
