[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.2", features = ["dynamic_linking"] }
bevy_mod_picking = "0.15.0"
itertool = "0.1.0"
itertools = "0.11.0"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.2"
uuid = { version = "1.4.1", features = ["v6"] }

## Requested by Bevy Docs
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
